# EDH-Hackathon

./: .gitignore  1_LocalGrids.ipynb  2_ProfilesExploration.ipynb  3_GridReinforcement.ipynb  4_BatteriesAndCurtailment.ipynb  5_TrillemmaEvaluation.ipynb  6_P2H2.ipynb  7_PVsMaxCapacity.ipynb  8_GraphAlgorithm.ipynb  LICENSE  ProfilesExploration.ipynb  README.md  environment.yml  graphals_src.py  grids_comparison.py  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh  setup_blobfuse.sh  setup_data.sh
plots/: README.md
src/: functions.py  visualization.py
