[project]
name = "edh-hackathon-env"
version = "0.1.0"
description = "Environment for EDH Hackathon"

dependencies = [
    "matplotlib",
    "plotly",
    "pandas",
    "numpy",
    "scikit-learn",
    "pyarrow",
    "seaborn",
    "networkx",
    "jupyterlab",
    "ipywidgets",
    "nbformat",
    "ipykernel",
    "notebook>=7.4.5",
    "ruff>=0.13.0",
]

[build-system]
requires = ["uv", "setuptools"]
build-backend = "setuptools.build_meta"
